<resources>
    <string name="app_name">DiceApp</string>
    <string name="roll_stats">Roll stats</string>
    <string name="shared_prefs_key">0</string>
    <string name="roll_1">com.example.diceapp.ROLL_KEY_1</string>
    <string name="roll_2">com.example.diceapp.ROLL_KEY_2</string>
    <string name="roll_3">com.example.diceapp.ROLL_KEY_3</string>
    <string name="roll_4">com.example.diceapp.ROLL_KEY_4</string>
    <string name="roll_5">com.example.diceapp.ROLL_KEY_5</string>
    <string name="roll_6">com.example.diceapp.ROLL_KEY_6</string>
    <string name="roll_7">com.example.diceapp.ROLL_KEY_7</string>
    <string name="roll_8">com.example.diceapp.ROLL_KEY_8</string>
    <string name="roll_9">com.example.diceapp.ROLL_KEY_9</string>
    <string name="roll_10">com.example.diceapp.ROLL_KEY_10</string>
    <string name="roll_11">com.example.diceapp.ROLL_KEY_11</string>
    <string name="roll_12">com.example.diceapp.ROLL_KEY_12</string>
    <string name="roll_13">com.example.diceapp.ROLL_KEY_13</string>
    <string name="roll_14">com.example.diceapp.ROLL_KEY_14</string>
    <string name="roll_15">com.example.diceapp.ROLL_KEY_15</string>
    <string name="roll_16">com.example.diceapp.ROLL_KEY_16</string>
    <string name="roll_17">com.example.diceapp.ROLL_KEY_17</string>
    <string name="roll_18">com.example.diceapp.ROLL_KEY_18</string>
    <string name="roll_19">com.example.diceapp.ROLL_KEY_19</string>
    <string name="roll_20">com.example.diceapp.ROLL_KEY_20</string>
</resources>
